--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav class="topnav" id="myTopnav">
                 <ul>
 
-                    <a href="index.html" ><img src="media/logost.png" alt="Svetla Tileva monogram" class="headerlogo "></a>
+                    <a href="index.html" ><img src="media/Logost.png" alt="Svetla Tileva monogram" class="headerlogo "></a>
 
                     <li>
                     <a href="dprojects.html" class="toright">Design Projects</a>
@@ -44,18 +44,18 @@
           </h1>
 
           <h3>NEW!!! <br>VIDEO CV Presentation</h3>
-          <div class="staff-grid col-2 gap">
 
+          <div class="staff-grid col-2 gap">
             <div class ="grid-item1">
-            <iframe width="600" height="315" src="https://player.vimeo.com/video/321937863" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
-            <h3>Video CV full version</h3>
+                <iframe width="600" height="315" src="https://player.vimeo.com/video/321937863" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
+                <h3>Video CV full version</h3>
             </div>
 
-          <div class ="grid-item1">
-          <iframe width="600" height="315" src="https://player.vimeo.com/video/321937947" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
-          <h3>Video CV Short version widescreen</h3>
-          </div>
-      </div>
+            <div class ="grid-item1">
+                <iframe width="600" height="315" src="https://player.vimeo.com/video/321937947" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
+                <h3>Video CV Short version widescreen</h3>
+            </div>
+        </div>
 
 <div class ="grid-item2">
            <h3>
