--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="topnav" id="myTopnav">
                 <ul>
 
-                    <a href="index.html" ><img src="media/logost.png" alt="Svetla Tileva monogram" class="headerlogo "></a>
+                    <a href="index.html" ><img src="media/Logost.png" alt="Svetla Tileva monogram" class="headerlogo "></a>
                     <a href="mailto:stileva12@gmail.com" target="_blank" class="hire">Hire me</a>
                     <li>
                     <a href="dprojects.html" class="toright ">Design Projects</a>
@@ -57,18 +57,8 @@
                                     Video Projects</a>
                             </h2>
 
-
-
-                            <!-- <h1> Video Projects</h1>
-                            <div class="staff-grid col-4 centertext" id="vprojects">
-                                <div class="grid-item ">
-
-                                    <img src="media/award1.jpg" class="img-centered img-fluid" alt="interior design award">
-                                </div> -->
-
-
-
                     </div>
+
                     <div class="bottom grid-item allbox box4">
                             <h2>
                                 <a href="contacts.html" >Contacts</a>
