--- a/vprojects.html
+++ b/vprojects.html
@@ -17,7 +17,7 @@
       <nav class="topnav" id="myTopnav">
         <ul>
           <li>
-            <a href="index.html" ><img src="media/logost.png" alt="Svetla's monogram" class="headerlogo "></a>
+            <a href="index.html" ><img src="media/Logost.png" alt="Svetla's monogram" class="headerlogo "></a>
           </li>
           <li><a href="dprojects.html" class="toright">Design Projects</a></li>
           <li><a href="vprojects.html" class="toright active">Video Projects</a></li>
@@ -37,16 +37,19 @@
         <iframe width="600" height="315" src="https://player.vimeo.com/video/321937863" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
         <p>Video CV full version</p>
         </div>
+
       <br>
       <div class ="grid-item img-fluid">
       <iframe width="600" height="315" src="https://player.vimeo.com/video/321937947" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
       <p>Video CV Short version widescreen</p>
       </div>
+
       <br>
       <div class ="grid-item img-fluid">
       <iframe width="600" height="315" src="https://player.vimeo.com/video/321937947" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
       <p>Video CV Short version Instagram format</p>
       </div>
+      
       <br>
       <div class ="grid-item img-fluid">
         <iframe src="https://player.vimeo.com/video/315326742" width="600" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
