--- a/dprojects.html
+++ b/dprojects.html
@@ -17,7 +17,7 @@
       <nav class="topnav" id="myTopnav">
         <ul>
           <li>
-            <a href="index.html" ><img src="media/logost.png" alt="Svetla's monogram" class="headerlogo "></a>
+            <a href="index.html" ><img src="media/Logost.png" alt="Svetla's monogram" class="headerlogo "></a>
           </li>
           <li><a href="dprojects.html" class="toright active">Design Projects</a></li>
           <li><a href="vprojects.html" class="toright">Video Projects</a></li>
