--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
       <nav class="topnav" id="myTopnav">
         <ul>
 
-            <a href="index.html" ><img src="media/logost.png" alt="Svetla Tileva monogram" class="headerlogo"></a>
+            <a href="index.html" ><img src="media/Logost.png" alt="Svetla Tileva monogram" class="headerlogo"></a>
 
           <li><a href="dprojects.html" class="toright">Design Projects</a></li>
           <li><a href="vprojects.html" class="toright">Video Projects</a></li>
